fixed some visibility issues